--- a/Projekt/CSS/pocetnastranica.css
+++ b/Projekt/CSS/pocetnastranica.css
@@ -15,6 +15,8 @@
 	flex: 50%;
 }
 .login {
+	display: inline-block;
+	margin:0px 0px 2px 0px;
 	border:1px #333 solid;   
 	padding:10px 50px;
 	background-color: #fc283f;
@@ -47,6 +49,8 @@
 	height: 100%;
 }
 .gumb {
+	display: inline-block;
+	margin:20px 0px 20px 0px;
 	border:1px #333 solid;   
 	padding:20px 100px;
 	background-color: #ffa1c3;
@@ -66,4 +70,16 @@
     height: 20%;
     text-align: center;
     overflow: hidden;
+}
+a:link{
+	text-decoration: none;
+	color: black;
+}
+a:visited{
+	text-decoration: none;
+	color:
+	black;
+}
+a:active{
+	color: red;
 }
