--- a/Projekt/CSS/login.css
+++ b/Projekt/CSS/login.css
@@ -1,32 +1,27 @@
 .navbar {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
     overflow: hidden;
     background-color: #333;
-    position: fixed;
-    top: 0;
-    width: 100%;
 }
 
-.navitem {
+.navbar a {
     float: left;
-    border-right:1px solid #bbb;
-}
-.navitem a {
-    display: block;
+    display: inline-block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 20px;
     text-decoration: none;
 }
-.navitem a:hover:not(.active) {
-    background-color: #111;
+
+.navbar a.right {
+    float: right;
 }
 .active {
     background-color: #4CAF50;
 }
-
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
 .gumb {
 	border:1px #333 solid;   
 	padding:5px 25px;
@@ -48,17 +43,14 @@
     display: flex;
     flex-wrap: no-wrap;
     flex-direction: row;
-    height: 40%;
     overflow: hidden;
     margin: 10% 0px 0px 5%;
 }
 .header > div.left{
-	height: 100%;
 	flex: 50%;
 	
 }
 .header > div.rest{
-	height: 100%;
 	flex:25%;
 	align-items: center;
 }
@@ -66,26 +58,50 @@
     display: flex;
     flex-wrap: no-wrap;
     flex-direction: row;
-    height: 70%;
     overflow: hidden;
     margin: 10% 0px 0px 5%;
 }
 .header_r > div.left{
-	height: 100%;
 	flex: 50%;
 	
 }
 .header_r > div.rest{
-	height: 100%;
 	flex:25%;
 	align-items: center;
 }
 .dabar {
-    width: 75%;
+    width: 400px;
     padding: 6px 10px;
     margin: 8px 0;
     box-sizing: border-box;
     border: 2px solid pink;
     border-radius: 4px;
 	font-size: 17px;
+}
+@media screen and (max-width: 500px) {
+    .navbar a {
+        float: none;
+        width: 100%;
+        text-align:center;
+        padding: 14px 0px;
+    }
+}
+@media screen and (max-width: 700px) {
+    .header{
+        flex-direction: column;
+    }
+    .header_r{
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 440px) {
+    .header{
+        flex-direction: column;
+    }
+    .header_r{
+        flex-direction: column;
+    }
+    .dabar{
+        width: 100%;
+    }
 }
