--- a/Projekt/CSS/pocetnastranica.css
+++ b/Projekt/CSS/pocetnastranica.css
@@ -1,20 +1,19 @@
 .header {  
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     flex-direction: row-reverse;
-    height: 20%;
     overflow: hidden;
     
 }
 .header > div.side {
-	height: 100%;
 	flex: 25%;
 }
 .header > div.middle {
-	height: 100%;
 	flex: 50%;
 }
 .login {
+	display: inline-block;
+	margin:0px 0px 2px 0px;
 	border:1px #333 solid;   
 	padding:10px 50px;
 	background-color: #fc283f;
@@ -32,21 +31,20 @@
 
 .menu {
 	display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;wrap;
     flex-direction: row;
-    height: 75%;
     overflow: hidden;
 
 }
 .menu > div.side {
 	flex: 25%;
-	height: 100%;
 }
 .menu > div.middle {
 	flex: 50%;
-	height: 100%;
 }
 .gumb {
+	display: inline-block;
+	margin:20px 0px 20px 0px;
 	border:1px #333 solid;   
 	padding:20px 100px;
 	background-color: #ffa1c3;
@@ -63,7 +61,26 @@
 	box-shadow:0px 0px 10px #555;
 }
 .footer{
-    height: 20%;
     text-align: center;
     overflow: hidden;
+}
+a:link{
+	text-decoration: none;
+	color: black;
+}
+a:visited{
+	text-decoration: none;
+	color:
+	black;
+}
+a:active{
+	color: red;
+}
+@media screen and (max-width: 700px) {
+    .header{   
+        flex-direction: column-reverse;
+    }
+    .menu{   
+        flex-direction: column;
+    }
 }
